@@ -345,6 +345,11 @@ pts_local_rigid.m
 	 PTS_LOCAL_RIGID  Non-rigid transformation that is locally rigid between
 	 two sets of points with known correspondence
 	
+pts_mesh.m
+
+	 PTS_MESH  Tetrahedral volumetric and triangular surface mesh of a cloud
+	 of points
+	
 pts_pca.m
 
 	 PTS_PCA  Linear and Kernel Principal Component Analysis (PCA and KPCA)
