@@ -1,3 +1,12 @@
+2011-09-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* Add PointsToolbox/pts_mesh.m (v1.0.1):
+
+	- Tetrahedral volumetric and triangular surface mesh of a cloud of
+	points. This is code that was part of scinrrd_seg2label_stats(),
+	but as Mikael Wallman was interested, I thought it'd be better to
+	have it as an independent function.
+
 2011-09-08  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* ItkToolbox/MexBaseFilter.hpp (v0.6.2):
